project/stage/testing/semantic/semantic_tests/accept/bin_ops.ul
void main() {
    1 == 1;
    0.0 == 0.1;
    false == true;
    true == true;
    "string" == "strang";
    'c' == 'c';

    1 < 1;
    0.0 < 0.1;
    "string" < "strang";
    'c' < 'c';

    1 + 1;
    0.0 + 0.1;
    "string" + "strang";
    'c' + 'c';

    1 - 1;
    0.0 - 0.1;
    'c' - 'c';

    1 * 1;
    0.0 * 0.1;


    (1 < 1) == (0.0 < 0.1);

    (1 == 1) == (0.0 == 0.1);
    false == (true == true) == true;
    "string" == "strang" == ('c' == 'c');

    1 + 1 + 1 + 1;
    0.0 + 0.1 + 0.1 + 0.1 + 0.1;
    "string" + "strang" + "strang";
    'c' + 'c' + 'c' + 'c';

    1 - 1 - 1 - 1;
    0.0 - 0.1 - 0.1 - 0.1;
    'c' - 'c' - 'c' - 'c';

    1 * 1 * 1 * 1 * 1;
    0.0 * 0.1 * 0.1 * 0.1;
}
