project/stage/testing/semantic/semantic_tests/reject/sub_int_float.ul
void main() {
    1 + 0.1;
}
